--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
 
 
-    <main id="conteudo">
+    <main class="conteudo">
         <article class="cont-home"> <!--Acrescentar no projeto-->
             <div class="destaque" id="destaque">
                 <div class="cont-destaque">
