--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+ 
 </head>
 
 <body>
@@ -29,7 +30,10 @@
             <h1>
                 <a href="index.html"><img src="imagem/logo.png" alt="Logotipo"></a>
             </h1>
-            <nav>
+            <span id="IconMenu" class="material-symbols-outlined" onclick="clickMenu()">
+                menu
+                </span>
+            <nav id="itens">
                 <a href="index.html" tabindex="1">Home</a>
                 <!--tabindex é utilizado para a acessibilidade-->
                 <a href="pacotes.html" tabindex="2">Pacotes</a>
@@ -142,6 +146,7 @@
     </footer>
     <script src="js/jquery-3.7.0.min.js"></script>
 <script src="slick/slick.min.js"></script>
+<script src="js/interacoes.js"></script>
 <script>
 $(document).ready(function(){
     // Inicialização/Ativação do plugin Slick
