--- a/acessorios.html
+++ b/acessorios.html
@@ -148,9 +148,9 @@
             </div>
         </div>
         <div class="assinatura">
-            <p>Desenvolvido por <b>SEU NOME</b> Site acadêmico |
+            <p>Desenvolvido por <b>Mykoll</b> Site acadêmico |
                 Todos os direitos reservados |
-                SENAC TITO &copy; 2023</p>
+                SENAC TITO &copy; 2024</p>
 
         </div>
 
